CAPY-1484: Add flex-wrap:wrap css rule for BpkRating to avoid extra wide hotel cards in flights dayview.

--- a/packages/bpk-component-rating/src/BpkRating.module.scss
+++ b/packages/bpk-component-rating/src/BpkRating.module.scss
@@ -35,6 +35,7 @@
   &__text-wrapper {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: baseline;
     white-space: nowrap;
 
